--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -7,7 +7,7 @@
 
 
     <% if current_user %>
-      <h1>Welcome, <%= @current_user.user_name  %>!</h1>
+      <h1>Welcome, <%= @current_user.name  %>!</h1>
     <% end %>
 
 
