--- a/app/views/users/new.erb
+++ b/app/views/users/new.erb
@@ -3,7 +3,7 @@
 
   <body>
     <form method="post" action="/users">
-      <label for="user_name">User Name: </label> <input type="text" name="user_name" value="<%= @user.user_name %>" placeholder="Enter username">
+      <label for="user_name">Name: </label> <input type="text" name="name" value="<%= @user.name %>" placeholder="Enter name">
       <label for="password">Password: </label> <input type="password" name="password" placeholder="Enter password">
       <label for="password_confirmation">Confirm password: </label> <input type="password" name="password_confirmation" placeholder="Confirm password">
       <label for="email">Email: </label> <input type="text" name="email" value="<%= @user.email %>" placeholder="Enter email" required>
